fix(deps): update versions to build with java 17